fix img forbes alignment

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -33,7 +33,7 @@ span{
     color: var(--black);
 }
 .desc{
-    background: url('/assets/images/UZUzvJEvKnI.png');
+    background: url('../assets/images/UZUzvJEvKnI.png');
     background-size:cover;
     // background-origin: border-box;
     background-repeat: no-repeat;
@@ -55,7 +55,7 @@ span{
     margin-right: 2em;
     margin-top: 1em;
 }
-img{
+.social img{
     display: inline-block;
     margin-bottom: 2em;
     margin-right: 7px;
@@ -63,6 +63,7 @@ img{
 .social img:last-child{
     position: relative;
     top: 2px;
+
 }
 .log{
     display: flex;
